--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">MicaBrowser</string>
     <string name="menu_history">历史</string>
     <string name="menu_bookmark">书签</string>
+    <string name="text_searchbox">搜索</string>
     <!--
     This string is used for square devices and overridden by hello_world in
     values-round/strings.xml for round devices.
