--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -4,6 +4,7 @@
     <string name="menu_history">History</string>
     <string name="menu_bookmark">Bookmark</string>
     <string name="text_searchbox">Search</string>
-    <string name="browser_zoom">Zoom</string>
+    <string name="browser_move">WebViewMove</string>
     <string name="menu_download">Download</string>
+    <string name="browser_reset">Reset</string>
 </resources>
