--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,9 @@
     <string name="menu_history">历史</string>
     <string name="menu_bookmark">书签</string>
     <string name="text_searchbox">搜索</string>
-    <string name="browser_zoom">页面缩放</string>
+    <string name="browser_move">页面移动</string>
     <string name="menu_download">下载</string>
+    <string name="browser_reset">还原页面</string>
     <!--
     This string is used for square devices and overridden by hello_world in
     values-round/strings.xml for round devices.
