--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,14 @@
     <string name="app_name">MicaBrowser</string>
     <string name="menu_history">历史</string>
     <string name="menu_bookmark">书签</string>
+    <string name="menu_download">下载</string>
+    <string name="menu_about">关于</string>
     <string name="text_searchbox">搜索</string>
     <string name="browser_move">页面移动</string>
-    <string name="menu_download">下载</string>
     <string name="browser_reset">还原页面</string>
+    <string name="about_note">更新日志</string>
+    <string name="about_github">Github 地址</string>
+    <string name="about_project" translatable="false">Mica Project</string>
     <!--
     This string is used for square devices and overridden by hello_world in
     values-round/strings.xml for round devices.
