--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -6,8 +6,7 @@
     <string name="menu_download">Download</string>
     <string name="menu_about">About</string>
     <string name="text_searchbox">Search</string>
-    <string name="browser_move">Move Webview</string>
-    <string name="browser_reset">Reset</string>
     <string name="about_note">Update Note</string>
     <string name="about_github">Github Page</string>
+    <string name="menu_setting">Settings</string>
 </resources>
